# RinhaBackend2025

./: .python-version  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.sh
app/: .env  main.py  prod.env  requirements.txt  uwsgi.ini
app/api/: entity.py  handler.py  main.py  router.py  schema.py
app/api/handlers/: payment.py  test.py
app/api/routers/: __init__.py  payment.py  test.py
app/api/schemas/: payment.py  test.py
app/consumer/: main.py
app/domain/repository/: payment.py
app/domain/service/: payment.py
app/setup/: main.py
docker/api/: Dockerfile
docker/consumer/: Dockerfile
docker/setup/: Dockerfile
nginx/: app.conf  nginx.conf
setup/: Dockerfile  setup.sh
